--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ Before building and using dwl, you'll need to install the following dependencies
 
 *** Arch Linux
 #+begin_src sh
-sudo pacman -S wayland wayland-protocols wlroots foot base-devel git wmenu wl-clipboard grim slurp swaybg firefox ttf-jetbrains-mono-nerd
+sudo pacman -S wayland wayland-protocols wlroots_0_19 foot base-devel git wmenu wl-clipboard grim slurp swaybg firefox ttf-jetbrains-mono-nerd
 #+end_src
 
 *** Gentoo Linux
